fixing spacing on create edit player

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -6,7 +6,6 @@
   }
 }
 
-
 // single team Page
 .l-team{
   margin-top: 40px;
@@ -15,9 +14,8 @@
   }
 }
 
-
 // creating a new team Page
-.l-createTeam, .l-createPlayer{
+.l-createTeam{
   margin-top: 40px;
   input{
     width: 100%;
@@ -65,6 +63,12 @@
 }
 
 // edit existing team Page
-.l-editPlayer{
-
+.l-createPlayer, .l-editPlayer{
+  margin-top:40px;
+  form {
+    padding: 15px;
+  }
+  input{
+    width: 100%;
+  }
 }
